Adding CSRF Protection

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,6 +8,7 @@
 
     <main>
         <form class="login-form" action="/signup" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="name">Name *</label>
                 <input type="name" name="name" id="name">
